--- a/CubeGameEngine/CubeGameEngine.vcxproj.filters
+++ b/CubeGameEngine/CubeGameEngine.vcxproj.filters
@@ -24,7 +24,7 @@
     <ClCompile Include="InputManager.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\..\..\Downloads\glad (1)\src\glad.c">
+    <ClCompile Include="glad.c">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
